--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -10,3 +10,5 @@ author_profile: true
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
 {% endfor %}
+
+<h1>Coming Soon...</h1>
