--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -14,5 +14,5 @@ author_profile: true
 
 
 <h1>Coming Soon...</h1>
-<a href="callumaltham.github.io/links">Link Testing</a>
+<a href="links">Link Testing</a>
 
