--- a/_pages/badges.html
+++ b/_pages/badges.html
@@ -6,7 +6,7 @@ author_profile: true
 ---
 
 <style>
-  body {
+  /* body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
@@ -15,7 +15,7 @@ author_profile: true
       align-items: center;
       min-height: 100vh;
       background-color: #f4f4f4;
-  }
+  } */
 
   .badge-grid {
       display: grid;
