--- a/_pages/badges.html
+++ b/_pages/badges.html
@@ -1,53 +1,88 @@
 ---
 layout: archive
-title: "Badges"
+title: "Completed Courses"
 permalink: /badges/
 author_profile: true
 ---
 
 <style>
-  /* body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      background-color: #f4f4f4;
-  } */
 
-  .badge-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-      gap: 15px;
-      max-width: 800px;
-      padding: 20px;
-      background: white;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      border-radius: 8px;
+.badge-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
+  max-width: 900px;
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
 
-  .badge-grid img {
-      width: 100%;
-      height: auto;
-      border-radius: 4px;
-      transition: transform 0.2s ease;
+  .badge-item {
+  display: flex;
+  align-items: center;
+  background: #fff;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
   }
 
-  .badge-grid img:hover {
-      transform: scale(1.05);
+  .badge-item:hover {
+  transform: scale(1.03);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+  }
+
+  .badge-item img {
+  width: 80px;
+  height: 80px;
+  margin-right: 15px;
+  border-radius: 50%;
+  }
+
+  .badge-text {
+  display: flex;
+  flex-direction: column;
+  }
+
+  .badge-text h3 {
+  margin: 0;
+  font-size: 1.2em;
+  font-weight: bold;
+  color: #333;
+  }
+
+  .badge-text p {
+  margin: 5px 0 0;
+  font-size: 0.9em;
+  color: #666;
   }
 </style>
 
-<h1>Badges</h1>
+<h1>Try Hack Me Badges</h1>
+<p>Below are a number of my notable badges earnt on the TryHackMe Platform. I made use of this platform to supplement and reinforce both my own knowledge after my masters degree in security as well as during the teaching of security level modules.</p>
 
 <div class="badge-grid">
-  <img src="badge1.png" alt="Badge 1">
-  <img src="badge2.png" alt="Badge 2">
-  <img src="badge3.png" alt="Badge 3">
-  <img src="badge4.png" alt="Badge 4">
-  <img src="badge5.png" alt="Badge 5">
-  <img src="badge6.png" alt="Badge 6">
-  <!-- Add more badges as needed -->
+  <div class="badge-item">
+      <img src="badge1.png" alt="Badge 1">
+      <div class="badge-text">
+          <h3>Networking Nerd</h3>
+          <p>Completing the 'Network Fundamentals' module</p>
+      </div>
+  </div>
+  <div class="badge-item">
+      <img src="badge2.png" alt="Badge 2">
+      <div class="badge-text">
+          <h3>Security Star</h3>
+          <p>Completing the 'Cybersecurity Basics' module</p>
+      </div>
+  </div>
+  <div class="badge-item">
+      <img src="badge3.png" alt="Badge 3">
+      <div class="badge-text">
+          <h3>Cloud Champion</h3>
+          <p>Completing the 'Cloud Computing' module</p>
+      </div>
+  </div>
+  <!-- Add more badge items as needed -->
 </div>
