--- a/_pages/badges.html
+++ b/_pages/badges.html
@@ -59,29 +59,16 @@ author_profile: true
   }
 </style>
 
-<h1>Try Hack Me Badges</h1>
+<h1>TryHackMe Badges</h1>
 <p>Below are a number of my notable badges earnt on the TryHackMe Platform. I made use of this platform to supplement and reinforce both my own knowledge after my masters degree in security as well as during the teaching of security level modules.</p>
-
+<p>A full suite of earned badges can be found on <a href="https://tryhackme.com/r/p/althamc">my TryHackMe profile</a></p>
+<img src="https://tryhackme-badges.s3.amazonaws.com/althamc.png" alt="Callum Altham TryHackMe badge" />
 <div class="badge-grid">
   <div class="badge-item">
       <img src="badge1.png" alt="Badge 1">
       <div class="badge-text">
-          <h3>Networking Nerd</h3>
-          <p>Completing the 'Network Fundamentals' module</p>
-      </div>
-  </div>
-  <div class="badge-item">
-      <img src="badge2.png" alt="Badge 2">
-      <div class="badge-text">
-          <h3>Security Star</h3>
-          <p>Completing the 'Cybersecurity Basics' module</p>
-      </div>
-  </div>
-  <div class="badge-item">
-      <img src="badge3.png" alt="Badge 3">
-      <div class="badge-text">
-          <h3>Cloud Champion</h3>
-          <p>Completing the 'Cloud Computing' module</p>
+          <h3>cat linux.txt</h3>
+          <p>Being competent in Linux</p>
       </div>
   </div>
   <!-- Add more badge items as needed -->
