--- a/_pages/badges.html
+++ b/_pages/badges.html
@@ -65,7 +65,7 @@ author_profile: true
 <img src="https://tryhackme-badges.s3.amazonaws.com/althamc.png" alt="Callum Altham TryHackMe badge" />
 <div class="badge-grid">
   <div class="badge-item">
-      <img src="images/linux.svg" alt="Badge 1">
+      <img src="../images/linux.svg" alt="Badge 1">
       <div class="badge-text">
           <h3>cat linux.txt</h3>
           <p>Being competent in Linux</p>
