--- a/_pages/badges.html
+++ b/_pages/badges.html
@@ -59,6 +59,35 @@ author_profile: true
   }
 </style>
 
+<h1>Licenses and Certifications</h1>
+<p>Below are a selection of certifications and licences I have obtained in the field of cybersecurity, technology, and education.</p>
+<p>A comprehensive list of my certifications and licences can be viewed on <a href="https://www.linkedin.com/in/callumaltham/details/certifications/">my LinkedIn profile</a>.</p>
+
+<div class="badge-grid">
+  <div class="badge-item">
+      <img src="../images/advancehe_logo.jpg" alt="AdvanceHE Logo">
+      <div class="badge-text">
+          <h3>Fellowship</h3>
+          <p>Advance HE</p>
+      </div>
+  </div>
+  <div class="badge-item">
+    <img src="../images/microsoft_logo.jpg" alt="Microsoft Logo">
+    <div class="badge-text">
+        <h3>Microsoft Technology Associate (MTA)</h3>
+        <p>Security Fundamentals</p>
+    </div>
+</div>
+<div class="badge-item">
+  <img src="../images/microsoft_logo.jpg" alt="Microsoft Logo">
+  <div class="badge-text">
+      <h3>Microsoft Certified</h3>
+      <p>Azure Fundamentals</p>
+  </div>
+</div>
+  <!-- Add more badge items as needed -->
+</div>
+
 <h1>TryHackMe Badges</h1>
 <p>Below are a number of my notable badges earnt on the TryHackMe Platform. I made use of this platform to supplement and reinforce both my own knowledge after my masters degree in security as well as during the teaching of security level modules.</p>
 <p>A full suite of earned badges can be found on <a href="https://tryhackme.com/r/p/althamc">my TryHackMe profile</a></p>
