--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,14 +1,60 @@
 ---
 layout: archive
-title: "Teaching"
+title: "Teaching Experience"
 permalink: /teaching/
 author_profile: true
 ---
+<!-- <h1>Coming Soon...</h1> -->
 
-{% include base_path %}
+<p>The following sections outline the modules I have taught or assisted on during my academic career, spanning both undergraduate and postgraduate levels.</p>
+<!-- Undergraduate Section -->
+<div class="section" id="undergraduate">
+    <h2>Undergraduate Modules</h2>
+    
+    <!-- Level 4 -->
+    <div class="subsection" id="level4">
+        <h3>Level 4</h3>
+        <ul>
+            <li>Foundations of Computer Science - 2022/2023 - 2023/2024</li>
+            <li>Programming: Concepts to Construction 2 - 2022/2023</li>
+            <li>Programming 1 - 2023/2024</li>
+            <li>Programming 2 - 2023/2024</li>
+            <li>Computer Systems Architecture & Networks - 2023/2024</li>
+            <li>Programming 1 - 2024/2025</li>
+        </ul>
+    </div>
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+    <!-- Level 5 -->
+    <div class="subsection" id="level5">
+        <h3>Level 5</h3>
+        <ul>
+            <li>Computer Systems Architecture - 2023/2024</li>
+            <li>Software Engineering - 2024/2025</li>
+            <li>Security Fundamentals - 2024/2025</li>
+        </ul>
+    </div>
 
-<h1>Coming Soon...</h1>
+    <!-- Level 6 -->
+    <div class="subsection" id="level6">
+        <h3>Level 6</h3>
+        <ul>
+            <li>Interface Programming - 2022/2023</li>
+            <li>Operating Systems - 2022/2023</li>
+            <li>Intelligent Systems - 2024/2025</li>
+        </ul>
+    </div>
+</div>
+
+<!-- Postgraduate Section -->
+<div class="section" id="postgraduate">
+    <h2>Postgraduate Modules</h2>
+    
+    <!-- Level 7 -->
+    <div class="subsection" id="level7">
+        <h3>Level 7</h3>
+        <ul>
+            <li>Penetration Testing and Ethics - 2023/2024</li>
+            <li>Machine Learning - 2023/2024</li>
+        </ul>
+    </div>
+</div>
