--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -17,10 +17,9 @@ author_profile: true
         <ul>
             <li>Foundations of Computer Science - 2022/2023 - 2023/2024</li>
             <li>Programming: Concepts to Construction 2 - 2022/2023</li>
-            <li>Programming 1 - 2023/2024</li>
+            <li>Programming 1 - 2023/2024, 2024/2025</li>
             <li>Programming 2 - 2023/2024</li>
             <li>Computer Systems Architecture & Networks - 2023/2024</li>
-            <li>Programming 1 - 2024/2025</li>
         </ul>
     </div>
 
